@startuml
' SPDX-FileCopyrightText: the TeamDojo authors
' SPDX-License-Identifier: Apache-2.0

skinparam shadowing false
skinparam componentStyle uml2


class Skill {
    title_EN
    title_translation_id
    description_EN
    description_translation_id
    implementation_EN
    implementation_translation_id
    validation_EN
    validation_translation_id
}

class Badge {
    title_EN
    title_translation_id
    description_EN
    description_translation_id
}

class Level {
    title_EN
    title_translation_id
    description_EN
    description_translation_id
}

class Team {
    title
    shortTitle
    slogan
}

class Training {
    title_EN
    title_translation_id
    description_EN
    description_translation_id
}

class Translation {
    id
    language_id
    text
}

class Language {
    id
    name
}

Skill "1" -- "m" Badge
Skill "1" -- "n" Level
Skill "1" -- "n" Team
Skill "n" -- "m" Training

Badge -- Translation
Level -- Translation
Team -- Translation
Training -- Translation
Skill -- Translation

Translation -- Language

@enduml
